--- a/video.html
+++ b/video.html
@@ -7,9 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <video controls="controls">
-    <source src="Video/video.mp4" type="video/mp4">
-    <source src="Video/This-is-business.mp4" type="video/mp4">
-    </video>
+    <div>
+        <video controls="controls">
+            <source src="Video/video.mp4" type="video/mp4">
+            <source src="Video/This-is-business.mp4" type="video/mp4">
+            </video>
+    </div>
 </body>
 </html>
